# lingolift-core

./: .gitignore  .pre-commit-config.yaml  ADR.md  Dockerfile  LICENSE.txt  Makefile  README.md  backlog.md  do  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
backend/: Dockerfile  Dockerfile-nlp.template  Dockerfile.template  Makefile  README.md  app.py  backend.py  backlog.md  benchmark.py  build-deps.sh  deploy.sh  docker-util.sh  docker_util.sh  lambda_function.py  lambda_function_spacy.py  lambda_functions_generative.py  lambda_functions_nlp.py  literal_translation.py  mock.py  pyproject.toml  requirements.txt  service.py  webserver.py
backend/.github/workflows/: .build-lambdas.yml  build-lambdas.yml
backend/docker/: Dockerfile-generative.template  Dockerfile-nlp.template
backend/domain/: response_suggestion.py
backend/generative/: literal_translation.py  morphologizer.py  response_suggestion.py  translation.py  upos.py
backend/gpt/: gpt_adapter.py  gpt_service.py  literal_translation.py  parser.py  prompts.py
backend/llm/: customer_number.py  gpt_adapter.py  llm_adapter.py  ollama_adapter.py  prompts.py
backend/morph_analysis/: spacy_adapter.py
backend/nlp/: README.md  error_detection.py  language_detection.py  morphologizer.py  spacy_adapter.py  syntactical_analysis.py  universal_features.py
backend/nlp/features/: features_de.json
backend/service/: generate.py  literal_translation.py  spacy_adapter.py
backend/terraform/: api_gateway.tf  authentication.tf  backend.tf  backend_dev.hcl  backend_prod.hcl  container_lambda.tf  ecr.tf  iam.tf  lambda.tf  layer.tf  main.tf  secrets.tf  variables.tf
backend/terraform/lambda/: ecr.tf  lambda.tf  variables.tf
backend/terraform/modules/endpoint/: api_gateway.tf  lambda.tf  output.tf  variables.tf
backend/test/: benchmark.py  gpt_adapter.py  literal_translation.py  test_app.py  test_benchmark.py  test_gpt_adapter.py  test_literal_translation.py
backend/test/domain/: literal_translation.py  translation.py
backend/test/integration/: test_app.py  test_benchmark.py
backend/test/unit/: test_benchmark_language_detection.py  test_gpt_adapter.py  test_inflection.py  test_lambda_handler.py  test_language_detection.py  test_legible_features.py  test_literal_translation.py  test_morphologizer.py  test_nlp_lambda.py  test_pre_warm_filter.py  test_spacy_adapter.py  test_syntactical_analysis.py  test_universal_feature_mapping.py  test_upos.py
backend/util/: lambda_proxy_return.py  timing.py
docker/: inflection.Dockerfile  syntactical_analysis.Dockerfile  webserver.Dockerfile
frontend/: Dockerfile  GrammrBot.py  Makefile  README.md  angular.json  app.py  grammr.py  highlighting.js  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css  test_coalesce_translation_analyses.py  test_inflectable.py  test_streamlit_app.py  tsconfig.json
frontend/pages/: inflecTable.py  inflectable.py
frontend/pages/markdown/: noun_table.md  verb_table.md
frontend/src/: styles.css
frontend/src/app/: api.service.ts  app.component.spec.ts  app.module.ts
frontend/src/app/parent/: parent.component.css  parent.component.html  parent.component.ts
frontend/src/app/response-suggestions/: response-suggestions.component.html  response-suggestions.component.ts
frontend/src/app/syntax-breakdown/: syntax-breakdown.component.css  syntax-breakdown.component.html  syntax-breakdown.component.spec.ts  syntax-breakdown.component.ts
frontend/src/app/translation/: translation.component.css  translation.component.html  translation.component.ts
frontend/src/app/ui/tooltip/: tooltip.component.css  tooltip.component.html  tooltip.component.ts  tooltip.directive.ts
frontend/src/environments/: environment.dev.ts  environment.ts
generative/: literal_translation.py  translation.py
lingolift/: README.md  abstract_context_container.py  angular.json  cli.py  core_lambda_context_container.py  core_lambda_handlers.py  lambda_context_container.py  lambda_functions_generative.py  lambda_functions_nlp.py  lambda_handlers.py  lambda_handlers_nlp.py  nlp_lambda_context_container.py  nlp_lambda_handlers.py  package-lock.json  package.json  webserver.py
lingolift/generative/: abstract_generator.py  inflection_generator.py  literal_translation.py  morphology_generator.py  response_suggestion.py  translation.py
lingolift/llm/: abstract_adapter.py  gpt_adapter.py  openai_adapter.py
lingolift/nlp/: README.md  abstract_language_detector.py  language_detection.py  lingua_language_detector.py  morphologizer.py  syntactical_analysis.py
lingolift/src/: index.html
lingolift/util/: lambda_proxy_return.py  timing.py
llm/: abstract_adapter.py  message.py
scripts/: push-docker.sh  run-local.sh  run.sh  run_backend.sh  run_bot.sh  run_frontend.sh
shared/: Makefile  README.md  pyproject.toml  secrets.py  setup.py
shared/model/: error.py  literal_translation.py  sentence_component.py  syntactical_analysis.py  translation.py
shared/shared/: client.py  exception.py  lambda_client.py  rendering.py  smoke_test.py  test_client.py  test_lambda_client.py  universal_features.py
shared/shared/features/: features_de.json
shared/shared/model/: error.py  inflection.py  literal_translation.py  model.py  response_suggestion.py  syntactical_analysis.py  test_syntactical_analysis.py  translation.py  upos_explanation.py
shared/shared/test/: smoke_test.py  test_client.py  test_rendering.py  test_universal_feature_mapping.py
src/: app.py  benchmark.py  gpt_adapter.py  log  main.py  mock.py
src/domain/: literal_translation.py  response.py  (+3 more)
streamlit_app/: Makefile  app.py  pyproject.toml  requirements.txt
telegram_client/: .env  Makefile  README.md  app.py  lingolift_client.py  pyproject.toml  requirements.txt  test_lingolift_client.py
terraform/: backend_prod.hcl  ecr.tf  lambda.tf  layer.tf  main.tf  provider.tf  security.tf  userdata.sh  variables.tf
test/: __init__.py  mock_llm_adapter.py  smoketest.py
util/: lambda_proxy.py
(+66 files in other folders)
