[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
aiohttp = "^3.9.1"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
openai = "^1.7.2"
requests = "2.31.0"
spacy = "3.6.1"
python-dotenv = "^1.0.0"
json5 = "^0.9.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
