[tool.poetry]
name = "lingolift-frontend"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
streamlit = "^1.30.0"
pytest = "^7.4.4"
mypy = "^1.8.0"
shared = {path = "../shared"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
