[tool.poetry]
name = "shared"
version = "0.2.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
requests = "2.31.0"
mypy = "^1.8.0"
pytest = "^7.4.4"
emoji = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
