[tool.poetry]
name = "telegram-client"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
shared = { git = "https://github.com/tobiaswaslowski/lingolift.git", subdirectory = "shared" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
